--- a/Nissannavara/99949-mate-what-a-story-about-who-knows-what/rus.textile
+++ b/Nissannavara/99949-mate-what-a-story-about-who-knows-what/rus.textile
@@ -1,48 +1,48 @@
-Чувак, что? - история о неизвестном
+Р§СѓРІР°Рє, С‡С‚Рѕ? - РёСЃС‚РѕСЂРёСЏ Рѕ РЅРµРёР·РІРµСЃС‚РЅРѕРј
 
-Автор: Nissannavara
+РђРІС‚РѕСЂ: Nissannavara
 
 *000*2024-04-11 03:34
 
-Снова пришло то время. Мне скучно, и мне буквально нечего делать. В этой истории будут некоторые части, но она не будет полностью посвящена Омо. Это просто история, которую можно написать, когда мне скучно дома.
+РЎРЅРѕРІР° РїСЂРёС€Р»Рѕ С‚Рѕ РІСЂРµРјСЏ. РњРЅРµ СЃРєСѓС‡РЅРѕ, Рё РјРЅРµ Р±СѓРєРІР°Р»СЊРЅРѕ РЅРµС‡РµРіРѕ РґРµР»Р°С‚СЊ. Р’ СЌС‚РѕР№ РёСЃС‚РѕСЂРёРё Р±СѓРґСѓС‚ РЅРµРєРѕС‚РѕСЂС‹Рµ С‡Р°СЃС‚Рё, РЅРѕ РѕРЅР° РЅРµ Р±СѓРґРµС‚ РїРѕР»РЅРѕСЃС‚СЊСЋ РїРѕСЃРІСЏС‰РµРЅР° РћРјРѕ. Р­С‚Рѕ РїСЂРѕСЃС‚Рѕ РёСЃС‚РѕСЂРёСЏ, РєРѕС‚РѕСЂСѓСЋ РјРѕР¶РЅРѕ РЅР°РїРёСЃР°С‚СЊ, РєРѕРіРґР° РјРЅРµ СЃРєСѓС‡РЅРѕ РґРѕРјР°.
 
-Ни один из персонажей не настоящий (кроме меня)
+РќРё РѕРґРёРЅ РёР· РїРµСЂСЃРѕРЅР°Р¶РµР№ РЅРµ РЅР°СЃС‚РѕСЏС‰РёР№ (РєСЂРѕРјРµ РјРµРЅСЏ)
 
-Я лежу в постели, тупое утро второго дня каникул, и тут я получаю сообщение от одного из моих приятелей: «Эй, чувак, ты не спишь?» Я отвечаю: «Да, что тебе нужно, братан?» Он отвечает: «Я только что нашёл пару дерьмовых старых машин на рынке, 500 долларов за все 4, давай переделаем их в бюджетные раллийные машины, братаны и их девчонки тоже в деле, ты с нами?» Я: «да, чёрт возьми, я в деле, просто хотел бы иметь девушку тоже, лол»
+РЇ Р»РµР¶Сѓ РІ РїРѕСЃС‚РµР»Рё, С‚СѓРїРѕРµ СѓС‚СЂРѕ РІС‚РѕСЂРѕРіРѕ РґРЅСЏ РєР°РЅРёРєСѓР», Рё С‚СѓС‚ СЏ РїРѕР»СѓС‡Р°СЋ СЃРѕРѕР±С‰РµРЅРёРµ РѕС‚ РѕРґРЅРѕРіРѕ РёР· РјРѕРёС… РїСЂРёСЏС‚РµР»РµР№: В«Р­Р№, С‡СѓРІР°Рє, С‚С‹ РЅРµ СЃРїРёС€СЊ?В» РЇ РѕС‚РІРµС‡Р°СЋ: В«Р”Р°, С‡С‚Рѕ С‚РµР±Рµ РЅСѓР¶РЅРѕ, Р±СЂР°С‚Р°РЅ?В» РћРЅ РѕС‚РІРµС‡Р°РµС‚: В«РЇ С‚РѕР»СЊРєРѕ С‡С‚Рѕ РЅР°С€С‘Р» РїР°СЂСѓ РґРµСЂСЊРјРѕРІС‹С… СЃС‚Р°СЂС‹С… РјР°С€РёРЅ РЅР° СЂС‹РЅРєРµ, 500 РґРѕР»Р»Р°СЂРѕРІ Р·Р° РІСЃРµ 4, РґР°РІР°Р№ РїРµСЂРµРґРµР»Р°РµРј РёС… РІ Р±СЋРґР¶РµС‚РЅС‹Рµ СЂР°Р»Р»РёР№РЅС‹Рµ РјР°С€РёРЅС‹, Р±СЂР°С‚Р°РЅС‹ Рё РёС… РґРµРІС‡РѕРЅРєРё С‚РѕР¶Рµ РІ РґРµР»Рµ, С‚С‹ СЃ РЅР°РјРё?В» РЇ: В«РґР°, С‡С‘СЂС‚ РІРѕР·СЊРјРё, СЏ РІ РґРµР»Рµ, РїСЂРѕСЃС‚Рѕ С…РѕС‚РµР» Р±С‹ РёРјРµС‚СЊ РґРµРІСѓС€РєСѓ С‚РѕР¶Рµ, Р»РѕР»В»
 
-«Лол, встретимся у меня около 12».
+В«Р›РѕР», РІСЃС‚СЂРµС‚РёРјСЃСЏ Сѓ РјРµРЅСЏ РѕРєРѕР»Рѕ 12В».
 
-Я: «А-а-а, понял».
+РЇ: В«Рђ-Р°-Р°, РїРѕРЅСЏР»В».
 
-*В конце концов я засыпаю*
+*Р’ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ СЏ Р·Р°СЃС‹РїР°СЋ*
 
-*Я просыпаюсь, чувствуя себя каким-то образом отдохнувшим, поэтому принимаю душ (или стою в стеклянной коробке с паром 40 минут и смотрю в пол)*
+*РЇ РїСЂРѕСЃС‹РїР°СЋСЃСЊ, С‡СѓРІСЃС‚РІСѓСЏ СЃРµР±СЏ РєР°РєРёРј-С‚Рѕ РѕР±СЂР°Р·РѕРј РѕС‚РґРѕС…РЅСѓРІС€РёРј, РїРѕСЌС‚РѕРјСѓ РїСЂРёРЅРёРјР°СЋ РґСѓС€ (РёР»Рё СЃС‚РѕСЋ РІ СЃС‚РµРєР»СЏРЅРЅРѕР№ РєРѕСЂРѕР±РєРµ СЃ РїР°СЂРѕРј 40 РјРёРЅСѓС‚ Рё СЃРјРѕС‚СЂСЋ РІ РїРѕР»)*
 
-Я прыгаю в свой верный pastie mobile (могучий AU falcon) и еду к дому моего приятеля. Когда я приезжаю, парни и их девушки уже сидят в сарае, и я вижу 4 дерьмовых ящика, стоящих на и под подъёмниками. Я тут же, чёрт возьми, в ужасе вижу VL COMMODORE GROUP A, КОТОРЫЙ ВЫГЛЯДИТ ТАК, КАК БУДТО СТОЯЛ В РУЧЬЕ УЖЕ ГОД.
+РЇ РїСЂС‹РіР°СЋ РІ СЃРІРѕР№ РІРµСЂРЅС‹Р№ pastie mobile (РјРѕРіСѓС‡РёР№ AU falcon) Рё РµРґСѓ Рє РґРѕРјСѓ РјРѕРµРіРѕ РїСЂРёСЏС‚РµР»СЏ. РљРѕРіРґР° СЏ РїСЂРёРµР·Р¶Р°СЋ, РїР°СЂРЅРё Рё РёС… РґРµРІСѓС€РєРё СѓР¶Рµ СЃРёРґСЏС‚ РІ СЃР°СЂР°Рµ, Рё СЏ РІРёР¶Сѓ 4 РґРµСЂСЊРјРѕРІС‹С… СЏС‰РёРєР°, СЃС‚РѕСЏС‰РёС… РЅР° Рё РїРѕРґ РїРѕРґСЉС‘РјРЅРёРєР°РјРё. РЇ С‚СѓС‚ Р¶Рµ, С‡С‘СЂС‚ РІРѕР·СЊРјРё, РІ СѓР¶Р°СЃРµ РІРёР¶Сѓ VL COMMODORE GROUP A, РљРћРўРћР Р«Р™ Р’Р«Р“Р›РЇР”РРў РўРђРљ, РљРђРљ Р‘РЈР”РўРћ РЎРўРћРЇР› Р’ Р РЈР§Р¬Р• РЈР–Р• Р“РћР”.
 
-Затем я вижу кабриолет Audi 80. Я думаю про себя: «Ну ладно, выглядит вполне нормально», а потом вспоминаю, что в Австралию привезли всего 500 экземпляров. Опять же, я просто в шоке от состояния. Грязь и грязь повсюду, отслаивающееся покрытие, ржавчина на каждой панели кузова и т. д. и т. п.
+Р—Р°С‚РµРј СЏ РІРёР¶Сѓ РєР°Р±СЂРёРѕР»РµС‚ Audi 80. РЇ РґСѓРјР°СЋ РїСЂРѕ СЃРµР±СЏ: В«РќСѓ Р»Р°РґРЅРѕ, РІС‹РіР»СЏРґРёС‚ РІРїРѕР»РЅРµ РЅРѕСЂРјР°Р»СЊРЅРѕВ», Р° РїРѕС‚РѕРј РІСЃРїРѕРјРёРЅР°СЋ, С‡С‚Рѕ РІ РђРІСЃС‚СЂР°Р»РёСЋ РїСЂРёРІРµР·Р»Рё РІСЃРµРіРѕ 500 СЌРєР·РµРјРїР»СЏСЂРѕРІ. РћРїСЏС‚СЊ Р¶Рµ, СЏ РїСЂРѕСЃС‚Рѕ РІ С€РѕРєРµ РѕС‚ СЃРѕСЃС‚РѕСЏРЅРёСЏ. Р“СЂСЏР·СЊ Рё РіСЂСЏР·СЊ РїРѕРІСЃСЋРґСѓ, РѕС‚СЃР»Р°РёРІР°СЋС‰РµРµСЃСЏ РїРѕРєСЂС‹С‚РёРµ, СЂР¶Р°РІС‡РёРЅР° РЅР° РєР°Р¶РґРѕР№ РїР°РЅРµР»Рё РєСѓР·РѕРІР° Рё С‚. Рґ. Рё С‚. Рї.
 
-Следующие три, гораздо менее редкие и самые чистые из всех, Holden Rodeo первого поколения. У него треснувшая панель приборов и немного поверхностной ржавчины на передней левой двери, но в остальном он выглядит чистым.
+РЎР»РµРґСѓСЋС‰РёРµ С‚СЂРё, РіРѕСЂР°Р·РґРѕ РјРµРЅРµРµ СЂРµРґРєРёРµ Рё СЃР°РјС‹Рµ С‡РёСЃС‚С‹Рµ РёР· РІСЃРµС…, Holden Rodeo РїРµСЂРІРѕРіРѕ РїРѕРєРѕР»РµРЅРёСЏ. РЈ РЅРµРіРѕ С‚СЂРµСЃРЅСѓРІС€Р°СЏ РїР°РЅРµР»СЊ РїСЂРёР±РѕСЂРѕРІ Рё РЅРµРјРЅРѕРіРѕ РїРѕРІРµСЂС…РЅРѕСЃС‚РЅРѕР№ СЂР¶Р°РІС‡РёРЅС‹ РЅР° РїРµСЂРµРґРЅРµР№ Р»РµРІРѕР№ РґРІРµСЂРё, РЅРѕ РІ РѕСЃС‚Р°Р»СЊРЅРѕРј РѕРЅ РІС‹РіР»СЏРґРёС‚ С‡РёСЃС‚С‹Рј.
 
-И последний. VC Commodore S с 1,9-литровым двигателем Opel. Состояние немного хуже, чем у Rodeo
+Р РїРѕСЃР»РµРґРЅРёР№. VC Commodore S СЃ 1,9-Р»РёС‚СЂРѕРІС‹Рј РґРІРёРіР°С‚РµР»РµРј Opel. РЎРѕСЃС‚РѕСЏРЅРёРµ РЅРµРјРЅРѕРіРѕ С…СѓР¶Рµ, С‡РµРј Сѓ Rodeo
 
-Ладно, глава 1 закончена, может, позже займусь чем-нибудь ещё.
+Р›Р°РґРЅРѕ, РіР»Р°РІР° 1 Р·Р°РєРѕРЅС‡РµРЅР°, РјРѕР¶РµС‚, РїРѕР·Р¶Рµ Р·Р°Р№РјСѓСЃСЊ С‡РµРј-РЅРёР±СѓРґСЊ РµС‰С‘.
 
 *001*2024-04-11 22:38
 
-Глава 2
+Р“Р»Р°РІР° 2
 
-Наконец-то зайдя в гараж, я просто говорю: «Чего, приятель?» И он отвечает: «Приятель, ага».
+РќР°РєРѕРЅРµС†-С‚Рѕ Р·Р°Р№РґСЏ РІ РіР°СЂР°Р¶, СЏ РїСЂРѕСЃС‚Рѕ РіРѕРІРѕСЂСЋ: В«Р§РµРіРѕ, РїСЂРёСЏС‚РµР»СЊ?В» Р РѕРЅ РѕС‚РІРµС‡Р°РµС‚: В«РџСЂРёСЏС‚РµР»СЊ, Р°РіР°В».
 
-Девушки немного хихикают, когда он это говорит.
+Р”РµРІСѓС€РєРё РЅРµРјРЅРѕРіРѕ С…РёС…РёРєР°СЋС‚, РєРѕРіРґР° РѕРЅ СЌС‚Рѕ РіРѕРІРѕСЂРёС‚.
 
-Наконец-то приходят два других брата, Уильям и Бен, которых их девушки обогнали примерно на 10 минут.
+РќР°РєРѕРЅРµС†-С‚Рѕ РїСЂРёС…РѕРґСЏС‚ РґРІР° РґСЂСѓРіРёС… Р±СЂР°С‚Р°, РЈРёР»СЊСЏРј Рё Р‘РµРЅ, РєРѕС‚РѕСЂС‹С… РёС… РґРµРІСѓС€РєРё РѕР±РѕРіРЅР°Р»Рё РїСЂРёРјРµСЂРЅРѕ РЅР° 10 РјРёРЅСѓС‚.
 
-Я начинаю думать, как мы выберем наши машины.
+РЇ РЅР°С‡РёРЅР°СЋ РґСѓРјР°С‚СЊ, РєР°Рє РјС‹ РІС‹Р±РµСЂРµРј РЅР°С€Рё РјР°С€РёРЅС‹.
 
-Затем брат (которого мы назовём Максом) говорит: «Просто выбирай»
+Р—Р°С‚РµРј Р±СЂР°С‚ (РєРѕС‚РѕСЂРѕРіРѕ РјС‹ РЅР°Р·РѕРІС‘Рј РњР°РєСЃРѕРј) РіРѕРІРѕСЂРёС‚: В«РџСЂРѕСЃС‚Рѕ РІС‹Р±РёСЂР°Р№В»
 
-Итак, я начинаю думать, какую машину я выберу? Рассмотрев варианты, насколько легко её будет починить, раллийные возможности, запчасти для вторичного рынка и т. д. и т. п. Я выбрал Commodore, потому что кто не любит VC? Или Holden, если на то пошло. Бен выбрал Walkinshaw VL, Уильям выбрал Audi 80 cabriolet, а Макс был практически вынужден выбрать Rodeo. (К тому же я не собирался использовать 3 Holden, я просто подумал о машинах навскидку и использовал их)
+РС‚Р°Рє, СЏ РЅР°С‡РёРЅР°СЋ РґСѓРјР°С‚СЊ, РєР°РєСѓСЋ РјР°С€РёРЅСѓ СЏ РІС‹Р±РµСЂСѓ? Р Р°СЃСЃРјРѕС‚СЂРµРІ РІР°СЂРёР°РЅС‚С‹, РЅР°СЃРєРѕР»СЊРєРѕ Р»РµРіРєРѕ РµС‘ Р±СѓРґРµС‚ РїРѕС‡РёРЅРёС‚СЊ, СЂР°Р»Р»РёР№РЅС‹Рµ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё, Р·Р°РїС‡Р°СЃС‚Рё РґР»СЏ РІС‚РѕСЂРёС‡РЅРѕРіРѕ СЂС‹РЅРєР° Рё С‚. Рґ. Рё С‚. Рї. РЇ РІС‹Р±СЂР°Р» Commodore, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РєС‚Рѕ РЅРµ Р»СЋР±РёС‚ VC? РР»Рё Holden, РµСЃР»Рё РЅР° С‚Рѕ РїРѕС€Р»Рѕ. Р‘РµРЅ РІС‹Р±СЂР°Р» Walkinshaw VL, РЈРёР»СЊСЏРј РІС‹Р±СЂР°Р» Audi 80 cabriolet, Р° РњР°РєСЃ Р±С‹Р» РїСЂР°РєС‚РёС‡РµСЃРєРё РІС‹РЅСѓР¶РґРµРЅ РІС‹Р±СЂР°С‚СЊ Rodeo. (Рљ С‚РѕРјСѓ Р¶Рµ СЏ РЅРµ СЃРѕР±РёСЂР°Р»СЃСЏ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ 3 Holden, СЏ РїСЂРѕСЃС‚Рѕ РїРѕРґСѓРјР°Р» Рѕ РјР°С€РёРЅР°С… РЅР°РІСЃРєРёРґРєСѓ Рё РёСЃРїРѕР»СЊР·РѕРІР°Р» РёС…)
 
-После того, как мы выбрали наши машины. Мы узнали, что работает только Rodeo, VC У коммодора (моей машины) просто были плохие свечи зажигания, а Audi 80 и VL требовались новые двигатели, поскольку у VL была дыра в блоке двигателя, а у двигателя Audi 80 было несколько ржавых отверстий, ведущих в цилиндры, и он также был залит.
+РџРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РјС‹ РІС‹Р±СЂР°Р»Рё РЅР°С€Рё РјР°С€РёРЅС‹. РњС‹ СѓР·РЅР°Р»Рё, С‡С‚Рѕ СЂР°Р±РѕС‚Р°РµС‚ С‚РѕР»СЊРєРѕ Rodeo, VC РЈ РєРѕРјРјРѕРґРѕСЂР° (РјРѕРµР№ РјР°С€РёРЅС‹) РїСЂРѕСЃС‚Рѕ Р±С‹Р»Рё РїР»РѕС…РёРµ СЃРІРµС‡Рё Р·Р°Р¶РёРіР°РЅРёСЏ, Р° Audi 80 Рё VL С‚СЂРµР±РѕРІР°Р»РёСЃСЊ РЅРѕРІС‹Рµ РґРІРёРіР°С‚РµР»Рё, РїРѕСЃРєРѕР»СЊРєСѓ Сѓ VL Р±С‹Р»Р° РґС‹СЂР° РІ Р±Р»РѕРєРµ РґРІРёРіР°С‚РµР»СЏ, Р° Сѓ РґРІРёРіР°С‚РµР»СЏ Audi 80 Р±С‹Р»Рѕ РЅРµСЃРєРѕР»СЊРєРѕ СЂР¶Р°РІС‹С… РѕС‚РІРµСЂСЃС‚РёР№, РІРµРґСѓС‰РёС… РІ С†РёР»РёРЅРґСЂС‹, Рё РѕРЅ С‚Р°РєР¶Рµ Р±С‹Р» Р·Р°Р»РёС‚.
 
