--- a/NoahEdar0483/104663-percys-college-odyssey/rus.textile
+++ b/NoahEdar0483/104663-percys-college-odyssey/rus.textile
@@ -1,40 +1,40 @@
-Одиссея колледжа Перси
+РћРґРёСЃСЃРµСЏ РєРѕР»Р»РµРґР¶Р° РџРµСЂСЃРё
 
-Автор: NoahEdar0483
+РђРІС‚РѕСЂ: NoahEdar0483
 
 *000*2024-09-01 06:40
 
-Привет всем! Я давно хотел написать здесь новые истории, и я написал довольно много односерийных или коротких историй. Однако с этой я на самом деле хочу сделать из неё более длинную серию. В ней участвует застенчивый студент колледжа по имени Перси, который встречает девушку по имени Артемида (или Арти для краткости), которая является жизнерадостным человеком, а также очень мускулистым и спортивным, и просто замечательным человеком... но он, Перси, смущается того, что у него есть фетиш на омо, и он раскрывает это ей. Однако она тоже увлекается омо, и любит жадно пить воду и удерживать её так долго, как может, но она не хочет открывать это ему! Так что это то, что она любит удерживать её как можно дольше, и он старается не показывать, как он возбуждается от этого. Я думаю, это будет очень весело писать. Это всего лишь короткий пролог, чтобы вывести эту историю за дверь
+РџСЂРёРІРµС‚ РІСЃРµРј! РЇ РґР°РІРЅРѕ С…РѕС‚РµР» РЅР°РїРёСЃР°С‚СЊ Р·РґРµСЃСЊ РЅРѕРІС‹Рµ РёСЃС‚РѕСЂРёРё, Рё СЏ РЅР°РїРёСЃР°Р» РґРѕРІРѕР»СЊРЅРѕ РјРЅРѕРіРѕ РѕРґРЅРѕСЃРµСЂРёР№РЅС‹С… РёР»Рё РєРѕСЂРѕС‚РєРёС… РёСЃС‚РѕСЂРёР№. РћРґРЅР°РєРѕ СЃ СЌС‚РѕР№ СЏ РЅР° СЃР°РјРѕРј РґРµР»Рµ С…РѕС‡Сѓ СЃРґРµР»Р°С‚СЊ РёР· РЅРµС‘ Р±РѕР»РµРµ РґР»РёРЅРЅСѓСЋ СЃРµСЂРёСЋ. Р’ РЅРµР№ СѓС‡Р°СЃС‚РІСѓРµС‚ Р·Р°СЃС‚РµРЅС‡РёРІС‹Р№ СЃС‚СѓРґРµРЅС‚ РєРѕР»Р»РµРґР¶Р° РїРѕ РёРјРµРЅРё РџРµСЂСЃРё, РєРѕС‚РѕСЂС‹Р№ РІСЃС‚СЂРµС‡Р°РµС‚ РґРµРІСѓС€РєСѓ РїРѕ РёРјРµРЅРё РђСЂС‚РµРјРёРґР° (РёР»Рё РђСЂС‚Рё РґР»СЏ РєСЂР°С‚РєРѕСЃС‚Рё), РєРѕС‚РѕСЂР°СЏ СЏРІР»СЏРµС‚СЃСЏ Р¶РёР·РЅРµСЂР°РґРѕСЃС‚РЅС‹Рј С‡РµР»РѕРІРµРєРѕРј, Р° С‚Р°РєР¶Рµ РѕС‡РµРЅСЊ РјСѓСЃРєСѓР»РёСЃС‚С‹Рј Рё СЃРїРѕСЂС‚РёРІРЅС‹Рј, Рё РїСЂРѕСЃС‚Рѕ Р·Р°РјРµС‡Р°С‚РµР»СЊРЅС‹Рј С‡РµР»РѕРІРµРєРѕРј... РЅРѕ РѕРЅ, РџРµСЂСЃРё, СЃРјСѓС‰Р°РµС‚СЃСЏ С‚РѕРіРѕ, С‡С‚Рѕ Сѓ РЅРµРіРѕ РµСЃС‚СЊ С„РµС‚РёС€ РЅР° РѕРјРѕ, Рё РѕРЅ СЂР°СЃРєСЂС‹РІР°РµС‚ СЌС‚Рѕ РµР№. РћРґРЅР°РєРѕ РѕРЅР° С‚РѕР¶Рµ СѓРІР»РµРєР°РµС‚СЃСЏ РѕРјРѕ, Рё Р»СЋР±РёС‚ Р¶Р°РґРЅРѕ РїРёС‚СЊ РІРѕРґСѓ Рё СѓРґРµСЂР¶РёРІР°С‚СЊ РµС‘ С‚Р°Рє РґРѕР»РіРѕ, РєР°Рє РјРѕР¶РµС‚, РЅРѕ РѕРЅР° РЅРµ С…РѕС‡РµС‚ РѕС‚РєСЂС‹РІР°С‚СЊ СЌС‚Рѕ РµРјСѓ! РўР°Рє С‡С‚Рѕ СЌС‚Рѕ С‚Рѕ, С‡С‚Рѕ РѕРЅР° Р»СЋР±РёС‚ СѓРґРµСЂР¶РёРІР°С‚СЊ РµС‘ РєР°Рє РјРѕР¶РЅРѕ РґРѕР»СЊС€Рµ, Рё РѕРЅ СЃС‚Р°СЂР°РµС‚СЃСЏ РЅРµ РїРѕРєР°Р·С‹РІР°С‚СЊ, РєР°Рє РѕРЅ РІРѕР·Р±СѓР¶РґР°РµС‚СЃСЏ РѕС‚ СЌС‚РѕРіРѕ. РЇ РґСѓРјР°СЋ, СЌС‚Рѕ Р±СѓРґРµС‚ РѕС‡РµРЅСЊ РІРµСЃРµР»Рѕ РїРёСЃР°С‚СЊ. Р­С‚Рѕ РІСЃРµРіРѕ Р»РёС€СЊ РєРѕСЂРѕС‚РєРёР№ РїСЂРѕР»РѕРі, С‡С‚РѕР±С‹ РІС‹РІРµСЃС‚Рё СЌС‚Сѓ РёСЃС‚РѕСЂРёСЋ Р·Р° РґРІРµСЂСЊ
 
-Глава 0: Пролог
+Р“Р»Р°РІР° 0: РџСЂРѕР»РѕРі
 
-Дорогой дневник,
+Р”РѕСЂРѕРіРѕР№ РґРЅРµРІРЅРёРє,
 
-Эм... привет, я думаю. Думаю, мне следует представиться. Меня зовут Персей Меркурий, но все зовут меня Перси. Я довольно застенчивый человек, и мне действительно не нравится заниматься социальными делами. Каждый раз, когда я пытался, это заканчивалось... ну, скажем так, не очень хорошо. Хех, иногда я беспокоюсь, что люди думают, что я однажды устрою перестрелку в школе, но я никогда даже не думал об этом. Вероятно, это моя вина; если бы я действительно набрался смелости поговорить с большим количеством людей, то, возможно, этот стереотип исчез бы... но я отвлёкся.
+Р­Рј... РїСЂРёРІРµС‚, СЏ РґСѓРјР°СЋ. Р”СѓРјР°СЋ, РјРЅРµ СЃР»РµРґСѓРµС‚ РїСЂРµРґСЃС‚Р°РІРёС‚СЊСЃСЏ. РњРµРЅСЏ Р·РѕРІСѓС‚ РџРµСЂСЃРµР№ РњРµСЂРєСѓСЂРёР№, РЅРѕ РІСЃРµ Р·РѕРІСѓС‚ РјРµРЅСЏ РџРµСЂСЃРё. РЇ РґРѕРІРѕР»СЊРЅРѕ Р·Р°СЃС‚РµРЅС‡РёРІС‹Р№ С‡РµР»РѕРІРµРє, Рё РјРЅРµ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅРµ РЅСЂР°РІРёС‚СЃСЏ Р·Р°РЅРёРјР°С‚СЊСЃСЏ СЃРѕС†РёР°Р»СЊРЅС‹РјРё РґРµР»Р°РјРё. РљР°Р¶РґС‹Р№ СЂР°Р·, РєРѕРіРґР° СЏ РїС‹С‚Р°Р»СЃСЏ, СЌС‚Рѕ Р·Р°РєР°РЅС‡РёРІР°Р»РѕСЃСЊ... РЅСѓ, СЃРєР°Р¶РµРј С‚Р°Рє, РЅРµ РѕС‡РµРЅСЊ С…РѕСЂРѕС€Рѕ. РҐРµС…, РёРЅРѕРіРґР° СЏ Р±РµСЃРїРѕРєРѕСЋСЃСЊ, С‡С‚Рѕ Р»СЋРґРё РґСѓРјР°СЋС‚, С‡С‚Рѕ СЏ РѕРґРЅР°Р¶РґС‹ СѓСЃС‚СЂРѕСЋ РїРµСЂРµСЃС‚СЂРµР»РєСѓ РІ С€РєРѕР»Рµ, РЅРѕ СЏ РЅРёРєРѕРіРґР° РґР°Р¶Рµ РЅРµ РґСѓРјР°Р» РѕР± СЌС‚РѕРј. Р’РµСЂРѕСЏС‚РЅРѕ, СЌС‚Рѕ РјРѕСЏ РІРёРЅР°; РµСЃР»Рё Р±С‹ СЏ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅР°Р±СЂР°Р»СЃСЏ СЃРјРµР»РѕСЃС‚Рё РїРѕРіРѕРІРѕСЂРёС‚СЊ СЃ Р±РѕР»СЊС€РёРј РєРѕР»РёС‡РµСЃС‚РІРѕРј Р»СЋРґРµР№, С‚Рѕ, РІРѕР·РјРѕР¶РЅРѕ, СЌС‚РѕС‚ СЃС‚РµСЂРµРѕС‚РёРї РёСЃС‡РµР· Р±С‹... РЅРѕ СЏ РѕС‚РІР»С‘РєСЃСЏ.
 
-Нет, я стараюсь изо всех сил быть как можно более хорошим учеником... но во мне есть очень... греховная вещь. Большинство людей, я полагаю, вырастают с чувствами к противоположному полу, которые в конечном итоге перерастают в сексуальные чувства, когда начинается половое созревание. У меня был похожий опыт... за исключением того, что большинство людей, вероятно, думают о сексе, когда это происходит. Однако, честно говоря, секс — это не то, о чём я думаю слишком много. Нет, меня возбуждает... о Боже, неужели я действительно собираюсь изложить это в письменном виде?
+РќРµС‚, СЏ СЃС‚Р°СЂР°СЋСЃСЊ РёР·Рѕ РІСЃРµС… СЃРёР» Р±С‹С‚СЊ РєР°Рє РјРѕР¶РЅРѕ Р±РѕР»РµРµ С…РѕСЂРѕС€РёРј СѓС‡РµРЅРёРєРѕРј... РЅРѕ РІРѕ РјРЅРµ РµСЃС‚СЊ РѕС‡РµРЅСЊ... РіСЂРµС…РѕРІРЅР°СЏ РІРµС‰СЊ. Р‘РѕР»СЊС€РёРЅСЃС‚РІРѕ Р»СЋРґРµР№, СЏ РїРѕР»Р°РіР°СЋ, РІС‹СЂР°СЃС‚Р°СЋС‚ СЃ С‡СѓРІСЃС‚РІР°РјРё Рє РїСЂРѕС‚РёРІРѕРїРѕР»РѕР¶РЅРѕРјСѓ РїРѕР»Сѓ, РєРѕС‚РѕСЂС‹Рµ РІ РєРѕРЅРµС‡РЅРѕРј РёС‚РѕРіРµ РїРµСЂРµСЂР°СЃС‚Р°СЋС‚ РІ СЃРµРєСЃСѓР°Р»СЊРЅС‹Рµ С‡СѓРІСЃС‚РІР°, РєРѕРіРґР° РЅР°С‡РёРЅР°РµС‚СЃСЏ РїРѕР»РѕРІРѕРµ СЃРѕР·СЂРµРІР°РЅРёРµ. РЈ РјРµРЅСЏ Р±С‹Р» РїРѕС…РѕР¶РёР№ РѕРїС‹С‚... Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј С‚РѕРіРѕ, С‡С‚Рѕ Р±РѕР»СЊС€РёРЅСЃС‚РІРѕ Р»СЋРґРµР№, РІРµСЂРѕСЏС‚РЅРѕ, РґСѓРјР°СЋС‚ Рѕ СЃРµРєСЃРµ, РєРѕРіРґР° СЌС‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚. РћРґРЅР°РєРѕ, С‡РµСЃС‚РЅРѕ РіРѕРІРѕСЂСЏ, СЃРµРєСЃ вЂ” СЌС‚Рѕ РЅРµ С‚Рѕ, Рѕ С‡С‘Рј СЏ РґСѓРјР°СЋ СЃР»РёС€РєРѕРј РјРЅРѕРіРѕ. РќРµС‚, РјРµРЅСЏ РІРѕР·Р±СѓР¶РґР°РµС‚... Рѕ Р‘РѕР¶Рµ, РЅРµСѓР¶РµР»Рё СЏ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ СЃРѕР±РёСЂР°СЋСЃСЊ РёР·Р»РѕР¶РёС‚СЊ СЌС‚Рѕ РІ РїРёСЃСЊРјРµРЅРЅРѕРј РІРёРґРµ?
 
-…
+вЂ¦
 
-Нет, я не могу этого сделать. Это... это слишком греховно!
+РќРµС‚, СЏ РЅРµ РјРѕРіСѓ СЌС‚РѕРіРѕ СЃРґРµР»Р°С‚СЊ. Р­С‚Рѕ... СЌС‚Рѕ СЃР»РёС€РєРѕРј РіСЂРµС…РѕРІРЅРѕ!
 
-…
+вЂ¦
 
-Ладно, хорошо, я... я... мне нравится смотреть, как люди писают. Вот, я сказал это. Можешь смеяться! Всё в порядке, правда, продолжай. Я заслужил это из-за таких... отвратительных мыслей. Да, это правда. Мне нравится омораши. Я знаю, что это отвратительно и ужасно, и если бы я мог вернуться и перестать этим увлекаться, я бы это сделал. Однако я ничего не могу с собой поделать. Есть что-то такое... невероятно горячее в том, чтобы видеть женщину, которая выпила кучу воды, извивается, пытается удержаться, пока не выдержит и не выпустит всё это себе в штаны, обливая себя мочой.
+Р›Р°РґРЅРѕ, С…РѕСЂРѕС€Рѕ, СЏ... СЏ... РјРЅРµ РЅСЂР°РІРёС‚СЃСЏ СЃРјРѕС‚СЂРµС‚СЊ, РєР°Рє Р»СЋРґРё РїРёСЃР°СЋС‚. Р’РѕС‚, СЏ СЃРєР°Р·Р°Р» СЌС‚Рѕ. РњРѕР¶РµС€СЊ СЃРјРµСЏС‚СЊСЃСЏ! Р’СЃС‘ РІ РїРѕСЂСЏРґРєРµ, РїСЂР°РІРґР°, РїСЂРѕРґРѕР»Р¶Р°Р№. РЇ Р·Р°СЃР»СѓР¶РёР» СЌС‚Рѕ РёР·-Р·Р° С‚Р°РєРёС…... РѕС‚РІСЂР°С‚РёС‚РµР»СЊРЅС‹С… РјС‹СЃР»РµР№. Р”Р°, СЌС‚Рѕ РїСЂР°РІРґР°. РњРЅРµ РЅСЂР°РІРёС‚СЃСЏ РѕРјРѕСЂР°С€Рё. РЇ Р·РЅР°СЋ, С‡С‚Рѕ СЌС‚Рѕ РѕС‚РІСЂР°С‚РёС‚РµР»СЊРЅРѕ Рё СѓР¶Р°СЃРЅРѕ, Рё РµСЃР»Рё Р±С‹ СЏ РјРѕРі РІРµСЂРЅСѓС‚СЊСЃСЏ Рё РїРµСЂРµСЃС‚Р°С‚СЊ СЌС‚РёРј СѓРІР»РµРєР°С‚СЊСЃСЏ, СЏ Р±С‹ СЌС‚Рѕ СЃРґРµР»Р°Р». РћРґРЅР°РєРѕ СЏ РЅРёС‡РµРіРѕ РЅРµ РјРѕРіСѓ СЃ СЃРѕР±РѕР№ РїРѕРґРµР»Р°С‚СЊ. Р•СЃС‚СЊ С‡С‚Рѕ-С‚Рѕ С‚Р°РєРѕРµ... РЅРµРІРµСЂРѕСЏС‚РЅРѕ РіРѕСЂСЏС‡РµРµ РІ С‚РѕРј, С‡С‚РѕР±С‹ РІРёРґРµС‚СЊ Р¶РµРЅС‰РёРЅСѓ, РєРѕС‚РѕСЂР°СЏ РІС‹РїРёР»Р° РєСѓС‡Сѓ РІРѕРґС‹, РёР·РІРёРІР°РµС‚СЃСЏ, РїС‹С‚Р°РµС‚СЃСЏ СѓРґРµСЂР¶Р°С‚СЊСЃСЏ, РїРѕРєР° РЅРµ РІС‹РґРµСЂР¶РёС‚ Рё РЅРµ РІС‹РїСѓСЃС‚РёС‚ РІСЃС‘ СЌС‚Рѕ СЃРµР±Рµ РІ С€С‚Р°РЅС‹, РѕР±Р»РёРІР°СЏ СЃРµР±СЏ РјРѕС‡РѕР№.
 
-…
+вЂ¦
 
-Боже, я такая грязная дегенеративная свинья. Это... просто неправильно! Мне не должно это нравиться! У меня не должно быть таких мыслей! Может быть, мне следует вернуться к инциденту, к тому проклятому инциденту, который пробудил во мне это греховное желание. Может быть, это, по крайней мере, позволит мне получить некое самопрояснение.
+Р‘РѕР¶Рµ, СЏ С‚Р°РєР°СЏ РіСЂСЏР·РЅР°СЏ РґРµРіРµРЅРµСЂР°С‚РёРІРЅР°СЏ СЃРІРёРЅСЊСЏ. Р­С‚Рѕ... РїСЂРѕСЃС‚Рѕ РЅРµРїСЂР°РІРёР»СЊРЅРѕ! РњРЅРµ РЅРµ РґРѕР»Р¶РЅРѕ СЌС‚Рѕ РЅСЂР°РІРёС‚СЊСЃСЏ! РЈ РјРµРЅСЏ РЅРµ РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ С‚Р°РєРёС… РјС‹СЃР»РµР№! РњРѕР¶РµС‚ Р±С‹С‚СЊ, РјРЅРµ СЃР»РµРґСѓРµС‚ РІРµСЂРЅСѓС‚СЊСЃСЏ Рє РёРЅС†РёРґРµРЅС‚Сѓ, Рє С‚РѕРјСѓ РїСЂРѕРєР»СЏС‚РѕРјСѓ РёРЅС†РёРґРµРЅС‚Сѓ, РєРѕС‚РѕСЂС‹Р№ РїСЂРѕР±СѓРґРёР» РІРѕ РјРЅРµ СЌС‚Рѕ РіСЂРµС…РѕРІРЅРѕРµ Р¶РµР»Р°РЅРёРµ. РњРѕР¶РµС‚ Р±С‹С‚СЊ, СЌС‚Рѕ, РїРѕ РєСЂР°Р№РЅРµР№ РјРµСЂРµ, РїРѕР·РІРѕР»РёС‚ РјРЅРµ РїРѕР»СѓС‡РёС‚СЊ РЅРµРєРѕРµ СЃР°РјРѕРїСЂРѕСЏСЃРЅРµРЅРёРµ.
 
-Итак, я была во втором... нет, в третьем классе, извините. Я была в третьем классе, и учительница вошла с сумочкой в ??одной руке... и большой бутылкой воды в другой. Тогда я не придала этому особого значения, но если я правильно помню, пока мы занимались поделками и прочим, она выходила из класса с бутылкой, предположительно, чтобы наполнить её. Теперь, когда я говорю большая, я имею в виду БОЛЬШАЯ! То есть, эта штука, должно быть, была на 1,5 литра (или 50 унций)! В течение дня она постоянно пила из этой штуки, и, оглядываясь назад, у этой женщины, должно быть, был мочевой пузырь верблюда или что-то в этом роде, потому что она, должно быть, наполняла его три раза в тот день.
+РС‚Р°Рє, СЏ Р±С‹Р»Р° РІРѕ РІС‚РѕСЂРѕРј... РЅРµС‚, РІ С‚СЂРµС‚СЊРµРј РєР»Р°СЃСЃРµ, РёР·РІРёРЅРёС‚Рµ. РЇ Р±С‹Р»Р° РІ С‚СЂРµС‚СЊРµРј РєР»Р°СЃСЃРµ, Рё СѓС‡РёС‚РµР»СЊРЅРёС†Р° РІРѕС€Р»Р° СЃ СЃСѓРјРѕС‡РєРѕР№ РІ ??РѕРґРЅРѕР№ СЂСѓРєРµ... Рё Р±РѕР»СЊС€РѕР№ Р±СѓС‚С‹Р»РєРѕР№ РІРѕРґС‹ РІ РґСЂСѓРіРѕР№. РўРѕРіРґР° СЏ РЅРµ РїСЂРёРґР°Р»Р° СЌС‚РѕРјСѓ РѕСЃРѕР±РѕРіРѕ Р·РЅР°С‡РµРЅРёСЏ, РЅРѕ РµСЃР»Рё СЏ РїСЂР°РІРёР»СЊРЅРѕ РїРѕРјРЅСЋ, РїРѕРєР° РјС‹ Р·Р°РЅРёРјР°Р»РёСЃСЊ РїРѕРґРµР»РєР°РјРё Рё РїСЂРѕС‡РёРј, РѕРЅР° РІС‹С…РѕРґРёР»Р° РёР· РєР»Р°СЃСЃР° СЃ Р±СѓС‚С‹Р»РєРѕР№, РїСЂРµРґРїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ, С‡С‚РѕР±С‹ РЅР°РїРѕР»РЅРёС‚СЊ РµС‘. РўРµРїРµСЂСЊ, РєРѕРіРґР° СЏ РіРѕРІРѕСЂСЋ Р±РѕР»СЊС€Р°СЏ, СЏ РёРјРµСЋ РІ РІРёРґСѓ Р‘РћР›Р¬РЁРђРЇ! РўРѕ РµСЃС‚СЊ, СЌС‚Р° С€С‚СѓРєР°, РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ, Р±С‹Р»Р° РЅР° 1,5 Р»РёС‚СЂР° (РёР»Рё 50 СѓРЅС†РёР№)! Р’ С‚РµС‡РµРЅРёРµ РґРЅСЏ РѕРЅР° РїРѕСЃС‚РѕСЏРЅРЅРѕ РїРёР»Р° РёР· СЌС‚РѕР№ С€С‚СѓРєРё, Рё, РѕРіР»СЏРґС‹РІР°СЏСЃСЊ РЅР°Р·Р°Рґ, Сѓ СЌС‚РѕР№ Р¶РµРЅС‰РёРЅС‹, РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ, Р±С‹Р» РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РІРµСЂР±Р»СЋРґР° РёР»Рё С‡С‚Рѕ-С‚Рѕ РІ СЌС‚РѕРј СЂРѕРґРµ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РѕРЅР°, РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ, РЅР°РїРѕР»РЅСЏР»Р° РµРіРѕ С‚СЂРё СЂР°Р·Р° РІ С‚РѕС‚ РґРµРЅСЊ.
 
-По мере того, как проходил день, я замечала несколько изменений в манерах моей учительницы. Когда она сидела за своим столом, пока мы работали, её ноги были скрещены, и она подпрыгивала вверх и вниз. Она играла со своими волосами, поправляла очки гораздо чаще и постоянно поглядывала на часы в классе. К концу дня она вставала, держа руки по бокам, и танцевала из стороны в сторону. Наконец, наступил конец дня, и большая часть класса собрала свои вещи и ушла. Мне же нужно было вернуться и взять что-нибудь из своего закутка. Обычно учительница оставалась до тех пор, пока мы все не уходили, то есть, когда уезжали автобусы и всех детей забирали после школы, но, как ни странно, моей учительницы там не было! Я вышла из класса, чтобы найти её, и в конце концов нашла её у женского туалета... который убирали уборщики, так что она не могла зайти... и, скажу я вам, она была в полном отчаянии.
+РџРѕ РјРµСЂРµ С‚РѕРіРѕ, РєР°Рє РїСЂРѕС…РѕРґРёР» РґРµРЅСЊ, СЏ Р·Р°РјРµС‡Р°Р»Р° РЅРµСЃРєРѕР»СЊРєРѕ РёР·РјРµРЅРµРЅРёР№ РІ РјР°РЅРµСЂР°С… РјРѕРµР№ СѓС‡РёС‚РµР»СЊРЅРёС†С‹. РљРѕРіРґР° РѕРЅР° СЃРёРґРµР»Р° Р·Р° СЃРІРѕРёРј СЃС‚РѕР»РѕРј, РїРѕРєР° РјС‹ СЂР°Р±РѕС‚Р°Р»Рё, РµС‘ РЅРѕРіРё Р±С‹Р»Рё СЃРєСЂРµС‰РµРЅС‹, Рё РѕРЅР° РїРѕРґРїСЂС‹РіРёРІР°Р»Р° РІРІРµСЂС… Рё РІРЅРёР·. РћРЅР° РёРіСЂР°Р»Р° СЃРѕ СЃРІРѕРёРјРё РІРѕР»РѕСЃР°РјРё, РїРѕРїСЂР°РІР»СЏР»Р° РѕС‡РєРё РіРѕСЂР°Р·РґРѕ С‡Р°С‰Рµ Рё РїРѕСЃС‚РѕСЏРЅРЅРѕ РїРѕРіР»СЏРґС‹РІР°Р»Р° РЅР° С‡Р°СЃС‹ РІ РєР»Р°СЃСЃРµ. Рљ РєРѕРЅС†Сѓ РґРЅСЏ РѕРЅР° РІСЃС‚Р°РІР°Р»Р°, РґРµСЂР¶Р° СЂСѓРєРё РїРѕ Р±РѕРєР°Рј, Рё С‚Р°РЅС†РµРІР°Р»Р° РёР· СЃС‚РѕСЂРѕРЅС‹ РІ СЃС‚РѕСЂРѕРЅСѓ. РќР°РєРѕРЅРµС†, РЅР°СЃС‚СѓРїРёР» РєРѕРЅРµС† РґРЅСЏ, Рё Р±РѕР»СЊС€Р°СЏ С‡Р°СЃС‚СЊ РєР»Р°СЃСЃР° СЃРѕР±СЂР°Р»Р° СЃРІРѕРё РІРµС‰Рё Рё СѓС€Р»Р°. РњРЅРµ Р¶Рµ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ РІРµСЂРЅСѓС‚СЊСЃСЏ Рё РІР·СЏС‚СЊ С‡С‚Рѕ-РЅРёР±СѓРґСЊ РёР· СЃРІРѕРµРіРѕ Р·Р°РєСѓС‚РєР°. РћР±С‹С‡РЅРѕ СѓС‡РёС‚РµР»СЊРЅРёС†Р° РѕСЃС‚Р°РІР°Р»Р°СЃСЊ РґРѕ С‚РµС… РїРѕСЂ, РїРѕРєР° РјС‹ РІСЃРµ РЅРµ СѓС…РѕРґРёР»Рё, С‚Рѕ РµСЃС‚СЊ, РєРѕРіРґР° СѓРµР·Р¶Р°Р»Рё Р°РІС‚РѕР±СѓСЃС‹ Рё РІСЃРµС… РґРµС‚РµР№ Р·Р°Р±РёСЂР°Р»Рё РїРѕСЃР»Рµ С€РєРѕР»С‹, РЅРѕ, РєР°Рє РЅРё СЃС‚СЂР°РЅРЅРѕ, РјРѕРµР№ СѓС‡РёС‚РµР»СЊРЅРёС†С‹ С‚Р°Рј РЅРµ Р±С‹Р»Рѕ! РЇ РІС‹С€Р»Р° РёР· РєР»Р°СЃСЃР°, С‡С‚РѕР±С‹ РЅР°Р№С‚Рё РµС‘, Рё РІ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ РЅР°С€Р»Р° РµС‘ Сѓ Р¶РµРЅСЃРєРѕРіРѕ С‚СѓР°Р»РµС‚Р°... РєРѕС‚РѕСЂС‹Р№ СѓР±РёСЂР°Р»Рё СѓР±РѕСЂС‰РёРєРё, С‚Р°Рє С‡С‚Рѕ РѕРЅР° РЅРµ РјРѕРіР»Р° Р·Р°Р№С‚Рё... Рё, СЃРєР°Р¶Сѓ СЏ РІР°Рј, РѕРЅР° Р±С‹Р»Р° РІ РїРѕР»РЅРѕРј РѕС‚С‡Р°СЏРЅРёРё.
 
-«Ох... пожалуйста, поторопитесь... это чрезвычайная ситуация!!!»
+В«РћС…... РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РїРѕС‚РѕСЂРѕРїРёС‚РµСЃСЊ... СЌС‚Рѕ С‡СЂРµР·РІС‹С‡Р°Р№РЅР°СЏ СЃРёС‚СѓР°С†РёСЏ!!!В»
 
-Я отчётливо помню, как её задница, прикрытая очень узкими джинсами, неудержимо тряслась, пока она ждала. Её груди подпрыгивали вверх и вниз, и их было видно даже сзади, и в футболке. Мой мозг взорвался от такого зрелища, но ничто не могло сравниться с тем, что произошло дальше. Сначала по её ноге потекла тонкая струйка, потом ещё одна. Следующее, что я помню, её штаны выглядели так, будто их окунули в воду! Огромная лужа её собственной мочи залила ковровое покрытие школы. Я не шучу, моя челюсть отвисла до пола, когда я это увидел. Я побежал, надеясь, что учительница меня не заметит, и на следующий день ничего особо не изменилось, так как в сознании моей учительницы никто из учеников этого не видел, и уборщик легко это вычистил. Да, ничего не изменилось... кроме того, что теперь это воспоминание навсегда запечатлелось в моем мозгу.
+РЇ РѕС‚С‡С‘С‚Р»РёРІРѕ РїРѕРјРЅСЋ, РєР°Рє РµС‘ Р·Р°РґРЅРёС†Р°, РїСЂРёРєСЂС‹С‚Р°СЏ РѕС‡РµРЅСЊ СѓР·РєРёРјРё РґР¶РёРЅСЃР°РјРё, РЅРµСѓРґРµСЂР¶РёРјРѕ С‚СЂСЏСЃР»Р°СЃСЊ, РїРѕРєР° РѕРЅР° Р¶РґР°Р»Р°. Р•С‘ РіСЂСѓРґРё РїРѕРґРїСЂС‹РіРёРІР°Р»Рё РІРІРµСЂС… Рё РІРЅРёР·, Рё РёС… Р±С‹Р»Рѕ РІРёРґРЅРѕ РґР°Р¶Рµ СЃР·Р°РґРё, Рё РІ С„СѓС‚Р±РѕР»РєРµ. РњРѕР№ РјРѕР·Рі РІР·РѕСЂРІР°Р»СЃСЏ РѕС‚ С‚Р°РєРѕРіРѕ Р·СЂРµР»РёС‰Р°, РЅРѕ РЅРёС‡С‚Рѕ РЅРµ РјРѕРіР»Рѕ СЃСЂР°РІРЅРёС‚СЊСЃСЏ СЃ С‚РµРј, С‡С‚Рѕ РїСЂРѕРёР·РѕС€Р»Рѕ РґР°Р»СЊС€Рµ. РЎРЅР°С‡Р°Р»Р° РїРѕ РµС‘ РЅРѕРіРµ РїРѕС‚РµРєР»Р° С‚РѕРЅРєР°СЏ СЃС‚СЂСѓР№РєР°, РїРѕС‚РѕРј РµС‰С‘ РѕРґРЅР°. РЎР»РµРґСѓСЋС‰РµРµ, С‡С‚Рѕ СЏ РїРѕРјРЅСЋ, РµС‘ С€С‚Р°РЅС‹ РІС‹РіР»СЏРґРµР»Рё С‚Р°Рє, Р±СѓРґС‚Рѕ РёС… РѕРєСѓРЅСѓР»Рё РІ РІРѕРґСѓ! РћРіСЂРѕРјРЅР°СЏ Р»СѓР¶Р° РµС‘ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ РјРѕС‡Рё Р·Р°Р»РёР»Р° РєРѕРІСЂРѕРІРѕРµ РїРѕРєСЂС‹С‚РёРµ С€РєРѕР»С‹. РЇ РЅРµ С€СѓС‡Сѓ, РјРѕСЏ С‡РµР»СЋСЃС‚СЊ РѕС‚РІРёСЃР»Р° РґРѕ РїРѕР»Р°, РєРѕРіРґР° СЏ СЌС‚Рѕ СѓРІРёРґРµР». РЇ РїРѕР±РµР¶Р°Р», РЅР°РґРµСЏСЃСЊ, С‡С‚Рѕ СѓС‡РёС‚РµР»СЊРЅРёС†Р° РјРµРЅСЏ РЅРµ Р·Р°РјРµС‚РёС‚, Рё РЅР° СЃР»РµРґСѓСЋС‰РёР№ РґРµРЅСЊ РЅРёС‡РµРіРѕ РѕСЃРѕР±Рѕ РЅРµ РёР·РјРµРЅРёР»РѕСЃСЊ, С‚Р°Рє РєР°Рє РІ СЃРѕР·РЅР°РЅРёРё РјРѕРµР№ СѓС‡РёС‚РµР»СЊРЅРёС†С‹ РЅРёРєС‚Рѕ РёР· СѓС‡РµРЅРёРєРѕРІ СЌС‚РѕРіРѕ РЅРµ РІРёРґРµР», Рё СѓР±РѕСЂС‰РёРє Р»РµРіРєРѕ СЌС‚Рѕ РІС‹С‡РёСЃС‚РёР». Р”Р°, РЅРёС‡РµРіРѕ РЅРµ РёР·РјРµРЅРёР»РѕСЃСЊ... РєСЂРѕРјРµ С‚РѕРіРѕ, С‡С‚Рѕ С‚РµРїРµСЂСЊ СЌС‚Рѕ РІРѕСЃРїРѕРјРёРЅР°РЅРёРµ РЅР°РІСЃРµРіРґР° Р·Р°РїРµС‡Р°С‚Р»РµР»РѕСЃСЊ РІ РјРѕРµРј РјРѕР·РіСѓ.
 
-Так что да... вот история о том, как я стал извращенцем. Я увидел, как моя учительница в третьем классе описилась, и это что-то пробудило во мне. В течение 10 лет эта память правила моими сексуальными чувствами. Всякий раз, когда я вижу, как девочка моего возраста пьёт много воды или что-то в этом роде, я втайне надеюсь, что когда это дойдёт до них, поблизости не окажется туалета. Я даже присоединился к команде Cross Country отчасти из-за этого. Зная, как много этим ребятам нужно пить, возможности были безграничны. К сожалению, со мной ничего подобного не случалось. Вокруг моей школы полно биотуалетов, поэтому я каким-то образом никогда не видел, чтобы происходили несчастные случаи. Теперь я закончил школу и собираюсь в колледж. О Боже, если ты меня слушаешь, надеюсь, ты простишь мне мои ужасные мысли.
+РўР°Рє С‡С‚Рѕ РґР°... РІРѕС‚ РёСЃС‚РѕСЂРёСЏ Рѕ С‚РѕРј, РєР°Рє СЏ СЃС‚Р°Р» РёР·РІСЂР°С‰РµРЅС†РµРј. РЇ СѓРІРёРґРµР», РєР°Рє РјРѕСЏ СѓС‡РёС‚РµР»СЊРЅРёС†Р° РІ С‚СЂРµС‚СЊРµРј РєР»Р°СЃСЃРµ РѕРїРёСЃРёР»Р°СЃСЊ, Рё СЌС‚Рѕ С‡С‚Рѕ-С‚Рѕ РїСЂРѕР±СѓРґРёР»Рѕ РІРѕ РјРЅРµ. Р’ С‚РµС‡РµРЅРёРµ 10 Р»РµС‚ СЌС‚Р° РїР°РјСЏС‚СЊ РїСЂР°РІРёР»Р° РјРѕРёРјРё СЃРµРєСЃСѓР°Р»СЊРЅС‹РјРё С‡СѓРІСЃС‚РІР°РјРё. Р’СЃСЏРєРёР№ СЂР°Р·, РєРѕРіРґР° СЏ РІРёР¶Сѓ, РєР°Рє РґРµРІРѕС‡РєР° РјРѕРµРіРѕ РІРѕР·СЂР°СЃС‚Р° РїСЊС‘С‚ РјРЅРѕРіРѕ РІРѕРґС‹ РёР»Рё С‡С‚Рѕ-С‚Рѕ РІ СЌС‚РѕРј СЂРѕРґРµ, СЏ РІС‚Р°Р№РЅРµ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ РєРѕРіРґР° СЌС‚Рѕ РґРѕР№РґС‘С‚ РґРѕ РЅРёС…, РїРѕР±Р»РёР·РѕСЃС‚Рё РЅРµ РѕРєР°Р¶РµС‚СЃСЏ С‚СѓР°Р»РµС‚Р°. РЇ РґР°Р¶Рµ РїСЂРёСЃРѕРµРґРёРЅРёР»СЃСЏ Рє РєРѕРјР°РЅРґРµ Cross Country РѕС‚С‡Р°СЃС‚Рё РёР·-Р·Р° СЌС‚РѕРіРѕ. Р—РЅР°СЏ, РєР°Рє РјРЅРѕРіРѕ СЌС‚РёРј СЂРµР±СЏС‚Р°Рј РЅСѓР¶РЅРѕ РїРёС‚СЊ, РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё Р±С‹Р»Рё Р±РµР·РіСЂР°РЅРёС‡РЅС‹. Рљ СЃРѕР¶Р°Р»РµРЅРёСЋ, СЃРѕ РјРЅРѕР№ РЅРёС‡РµРіРѕ РїРѕРґРѕР±РЅРѕРіРѕ РЅРµ СЃР»СѓС‡Р°Р»РѕСЃСЊ. Р’РѕРєСЂСѓРі РјРѕРµР№ С€РєРѕР»С‹ РїРѕР»РЅРѕ Р±РёРѕС‚СѓР°Р»РµС‚РѕРІ, РїРѕСЌС‚РѕРјСѓ СЏ РєР°РєРёРј-С‚Рѕ РѕР±СЂР°Р·РѕРј РЅРёРєРѕРіРґР° РЅРµ РІРёРґРµР», С‡С‚РѕР±С‹ РїСЂРѕРёСЃС…РѕРґРёР»Рё РЅРµСЃС‡Р°СЃС‚РЅС‹Рµ СЃР»СѓС‡Р°Рё. РўРµРїРµСЂСЊ СЏ Р·Р°РєРѕРЅС‡РёР» С€РєРѕР»Сѓ Рё СЃРѕР±РёСЂР°СЋСЃСЊ РІ РєРѕР»Р»РµРґР¶. Рћ Р‘РѕР¶Рµ, РµСЃР»Рё С‚С‹ РјРµРЅСЏ СЃР»СѓС€Р°РµС€СЊ, РЅР°РґРµСЋСЃСЊ, С‚С‹ РїСЂРѕСЃС‚РёС€СЊ РјРЅРµ РјРѕРё СѓР¶Р°СЃРЅС‹Рµ РјС‹СЃР»Рё.
 
-Тьфу, мне, наверное, пора остановиться. Мне утром в школу.
+РўСЊС„Сѓ, РјРЅРµ, РЅР°РІРµСЂРЅРѕРµ, РїРѕСЂР° РѕСЃС‚Р°РЅРѕРІРёС‚СЊСЃСЏ. РњРЅРµ СѓС‚СЂРѕРј РІ С€РєРѕР»Сѓ.
 
